--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "bot": "node bot/index.js",
+    "bot:dev": "nodemon bot/index.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  "keywords": ["team", "management", "calendar", "vacation"],
+  "keywords": [
+    "team",
+    "management",
+    "calendar",
+    "vacation"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^5.7.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
-    "method-override": "^3.0.0",
-    "@prisma/client": "^5.7.1",
-    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "bcryptjs": "^2.4.3"
+    "method-override": "^3.0.0",
+    "node-cron": "^4.2.1",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
