--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,12 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/teambie
+            pm2 stop all
             git stash
             git pull origin main
             npm install
             npx prisma generate
             npx prisma migrate deploy
-            pm2 restart server || pm2 start server.js --name server
+            pm2 start all
             pm2 status
             echo "✅ Deployment completed successfully!"
