--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,6 @@ jobs:
             npm install
             npx prisma generate
             npx prisma migrate deploy
-            pm2 restart all
+            pm2 restart server.js || pm2 start server.js
             pm2 status
             echo "✅ Deployment completed successfully!"
