--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
             git pull origin main
             npm install
             npx prisma generate
-            npx prisma migrate deploy
-            pm2 restart restart all
+            npx prisma db push --accept-data-loss --skip-generate
+            pm2 restart all
             pm2 status
             echo "✅ Deployment completed successfully!"
