updated employee edit page

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
 
             echo "🗄️ Updating database schema..."
             npx prisma generate
-            npx prisma db push --accept-data-loss
+            npx prisma migrate deploy
 
             echo "🚀 Restarting application..."
             npx pm2 restart all || npx pm2 start server.js --name teambie
