fixed migration issue and updated deployment codes to avoid this in future

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
 
             echo "🗄️ Updating database schema..."
             npx prisma generate
-            npx prisma migrate deploy
+            npx prisma migrate deploy || { echo "❌ Migration failed!"; exit 1; }
 
             echo "🚀 Restarting application..."
             npx pm2 restart all || npx pm2 start server.js --name teambie
